--- a/index.html
+++ b/index.html
@@ -31,3 +31,4 @@
 </html>
 <h2 id="countdown-display">Time remaining: 60 seconds</h2>
 <script src="your-javascript-file.js"></script>
+<h2 id="countdown-display">Time remaining: 60 seconds</h2>
