--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <h2>Today's Sentiment</h2>
             <p id="sentiment">Loading...</p>
         </section>
+        <h2 id="countdown-display">Time remaining: 60 seconds</h2> <!-- Corrected here -->
     </main>
 
     <!-- Footer -->
@@ -26,9 +27,6 @@
         <p>&copy; 2025 Bull or Bear Coin. All rights reserved.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="script.js"></script> <!-- Only include this once -->
 </body>
 </html>
-<h2 id="countdown-display">Time remaining: 60 seconds</h2>
-<script src="your-javascript-file.js"></script>
-<h2 id="countdown-display">Time remaining: 60 seconds</h2>
