--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <main>
         <section class="content">
             <h2>Today's Sentiment</h2>
-            <p id="sentiment">Loading...</p>
+            <p id="sentiment">Loading...</p> <!-- This id should match the one used in JavaScript -->
+            <h2 id="countdown-display">Time remaining: 60 seconds</h2> <!-- Display countdown -->
         </section>
-        <h2 id="countdown-display">Time remaining: 60 seconds</h2> <!-- Corrected here -->
     </main>
 
     <!-- Footer -->
@@ -27,6 +27,7 @@
         <p>&copy; 2025 Bull or Bear Coin. All rights reserved.</p>
     </footer>
 
-    <script src="script.js"></script> <!-- Only include this once -->
+    <script src="script.js"></script>
 </body>
 </html>
+
