--- a/index.html
+++ b/index.html
@@ -7,16 +7,18 @@
     
     <!-- Confetti Library -->
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.4.0/dist/confetti.browser.min.js"></script>
+
+    <!-- Link to your CSS file -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Header -->
-    <header>
-        <h1>Welcome to Bull or Bear Coin ($BorB)</h1>
-        <p>Your daily trading opportunity with random sentiment.</p>
-    </header>
-
     <!-- Main Content -->
     <main>
+        <header>
+            <h1>Welcome to Bull or Bear Coin ($BorB)</h1>
+            <p>Your daily trading opportunity with random sentiment.</p>
+        </header>
+
         <section class="content">
             <h2>Today's Sentiment</h2>
             <p id="sentiment">Loading...</p> <!-- This id should match the one used in JavaScript -->
