--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
         <header>
             <h1>Welcome to Bull or Bear Coin ($BorB)</h1>
-            <p>Your daily trading opportunity with random sentiment.</p>
+            <p>Your daily trading opportunity with a random sentiment being generated.</p>
         </header>
 
         <section class="content">
