--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
-                <li><a href="#how-it-works">How it Works</a></li>
+                <li><a href="#how-it-works">Provably Fair</a></li>
                 <li><a href="#social">Social</a></li>
                 <li><a href="https://your-cta-link.com">Get Started</a></li>
             </ul>
