--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
     <!-- Footer -->
     <footer>
+        <button id="get-started-btn">Get Started</button>
         <p>&copy; 2025 Bull or Bear Coin. All rights reserved.</p>
         <nav>
             <a href="#how-it-works">How it Works</a> | 
