--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
             <p id="sentiment">Loading...</p> <!-- This id should match the one used in JavaScript -->
             <h2 id="countdown-display">Time remaining: 60 seconds</h2> <!-- Display countdown -->
         </section>
+
+        <!-- Button to Buy $BorB from Raydium or Marketplace -->
+        <button id="get-started-btn">Get Started</button>
     </main>
 
     <!-- Footer -->
     <footer>
-        <button id="get-started-btn">Get Started</button>
         <p>&copy; 2025 Bull or Bear Coin. All rights reserved.</p>
         <nav>
             <a href="#how-it-works">How it Works</a> | 
