--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Main Content -->
     <main>
         <section class="content">
-            <h2>Today's Sentiment</h2>
+            <h2>Today's Sentiment:</h2>
             <p id="sentiment">Loading...</p> <!-- This id should match the one used in JavaScript -->
             <h2 id="countdown-display">Time remaining: 60 seconds</h2> <!-- Display countdown -->
         </section>
