--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </section>
 
         <!-- Button to Buy $BorB from Raydium or Marketplace -->
-        <button id="get-started-btn">Get Started</button>
+        <button id="get-started-btn">Start Trading</button>
     </main>
 
     <!-- Footer -->
