--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </ul>
         </nav>
         <h1>Welcome to Bull or Bear Coin ($BorB)</h1>
-        <p>Your daily trading opportunity with random sentiment.</p>
+        <p>Your daily trading opportunity with random sentiment being generated.</p>
     </header>
 
     <!-- Main Content -->
