--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <h2>Today's Sentiment:</h2>
             <p id="sentiment">Loading...</p> <!-- This id should match the one used in JavaScript -->
             <h2 id="countdown-display">Time remaining: 60 seconds</h2> <!-- Display countdown -->
+            <h3 id="random-value">Random Value: Loading...</h3> <!-- Display the random value used -->
         </section>
 
         <!-- Button to Buy $BorB from Raydium or Marketplace -->
