--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
-                <li><a href="#how-it-works">Provably Fair</a></li>
+                <li><a href="#proof-of-chance">Proof of Chance</a></li> <!-- Changed from Provably Fair -->
                 <li><a href="#social">Social</a></li>
             </ul>
         </nav>
@@ -30,7 +30,13 @@
             <h2>Today's Sentiment:</h2>
             <p id="sentiment">Loading...</p> <!-- This id should match the one used in JavaScript -->
             <h2 id="countdown-display">Time remaining: 60 seconds</h2> <!-- Display countdown -->
-            <h3 id="random-value">Random Value: Loading...</h3> <!-- Display the random value used -->
+        </section>
+
+        <!-- Proof of Chance Section -->
+        <section id="proof-of-chance">
+            <h2>Proof of Chance</h2>
+            <p>Here is the value that determined today's result:</p>
+            <h3 id="random-value">Loading...</h3> <!-- Moved Random Value Here -->
         </section>
 
         <!-- Button to Buy $BorB from Raydium or Marketplace -->
@@ -41,7 +47,7 @@
     <footer>
         <p>&copy; 2025 Bull or Bear Coin. All rights reserved.</p>
         <nav>
-            <a href="#how-it-works">How it Works</a> | 
+            <a href="#proof-of-chance">Proof of Chance</a> | 
             <a href="#social">Social</a> | 
             <a href="privacy.html">Privacy Policy</a> | 
             <a href="terms.html">Terms of Service</a>
@@ -51,3 +57,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
