--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
-                <li><a href="#proof-of-chance">Proof of Chance</a></li> <!-- Changed from Provably Fair -->
+                <li><a href="proof-of-chance.html">Proof of Chance</a></li> <!-- Proof of Chance link -->
                 <li><a href="#social">Social</a></li>
             </ul>
         </nav>
@@ -32,13 +32,6 @@
             <h2 id="countdown-display">Time remaining: 60 seconds</h2> <!-- Display countdown -->
         </section>
 
-        <!-- Proof of Chance Section -->
-        <section id="proof-of-chance">
-            <h2>Proof of Chance</h2>
-            <p>Here is the value that determined today's result:</p>
-            <h3 id="random-value">Loading...</h3> <!-- Moved Random Value Here -->
-        </section>
-
         <!-- Button to Buy $BorB from Raydium or Marketplace -->
         <button id="get-started-btn">Start Your Trading Journey with $BorB</button>
     </main>
@@ -47,7 +40,7 @@
     <footer>
         <p>&copy; 2025 Bull or Bear Coin. All rights reserved.</p>
         <nav>
-            <a href="#proof-of-chance">Proof of Chance</a> | 
+            <a href="proof-of-chance.html">Proof of Chance</a> | 
             <a href="#social">Social</a> | 
             <a href="privacy.html">Privacy Policy</a> | 
             <a href="terms.html">Terms of Service</a>
@@ -57,4 +50,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
