--- a/proof-of-chance.html
+++ b/proof-of-chance.html
@@ -20,8 +20,9 @@
         <section>
             <h2>How Today's Sentiment Was Determined</h2>
             <p>Today's sentiment was generated randomly using a secure method.</p>
-            <p id="sentiment-result">Loading...</p> <!-- Display sentiment result -->
-            <p id="random-value">Loading...</p> <!-- Display random value -->
+            <p id="sentiment">Loading...</p> <!-- Display sentiment result -->
+            <p id="random-value" style="display:none;">Loading...</p> <!-- Display random value -->
+            <p id="countdown-display">Time remaining: 60 seconds</p> <!-- Countdown Timer -->
         </section>
     </main>
 
@@ -37,10 +38,10 @@
 
             // Display the retrieved data or default if not found
             if (sentiment && randomValue) {
-                document.getElementById("sentiment-result").textContent = `Sentiment: ${sentiment}`;
+                document.getElementById("sentiment").textContent = `Sentiment: ${sentiment}`;
                 document.getElementById("random-value").textContent = `Random Value: ${randomValue}`;
             } else {
-                document.getElementById("sentiment-result").textContent = "No sentiment data found.";
+                document.getElementById("sentiment").textContent = "No sentiment data found.";
                 document.getElementById("random-value").textContent = "No random value data found.";
             }
         };
