--- a/proof-of-chance.html
+++ b/proof-of-chance.html
@@ -20,9 +20,8 @@
         <section>
             <h2>How Today's Sentiment Was Determined</h2>
             <p>Today's sentiment was generated randomly using a secure method.</p>
-            <p id="sentiment">Loading...</p> <!-- Display sentiment result -->
-            <p id="random-value" style="display:none;">Loading...</p> <!-- Display random value -->
-            <p id="countdown-display">Time remaining: 60 seconds</p> <!-- Countdown Timer -->
+            <p id="sentiment-result">Loading...</p> <!-- Display sentiment result -->
+            <p id="random-value">Loading...</p> <!-- Display random value -->
         </section>
     </main>
 
@@ -36,12 +35,19 @@
             const sentiment = localStorage.getItem("sentiment");
             const randomValue = localStorage.getItem("randomValue");
 
-            // Display the retrieved data or default if not found
+            // Display the retrieved data
             if (sentiment && randomValue) {
-                document.getElementById("sentiment").textContent = `Sentiment: ${sentiment}`;
+                document.getElementById("sentiment-result").textContent = `Sentiment: ${sentiment}`;
                 document.getElementById("random-value").textContent = `Random Value: ${randomValue}`;
+
+                // Change background color based on sentiment
+                if (sentiment === "Bullish") {
+                    document.body.style.backgroundColor = "green"; // Bullish sentiment: green
+                } else {
+                    document.body.style.backgroundColor = "red"; // Bearish sentiment: red
+                }
             } else {
-                document.getElementById("sentiment").textContent = "No sentiment data found.";
+                document.getElementById("sentiment-result").textContent = "No sentiment data found.";
                 document.getElementById("random-value").textContent = "No random value data found.";
             }
         };
