--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <!-- Confetti Library -->
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.4.0/dist/confetti.browser.min.js"></script>
     
-    <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS if needed -->
+    <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS -->
 </head>
 <body>
     <!-- Header with Navigation -->
     <header>
         <nav>
             <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="proof-of-chance.html">Proof of Chance</a></li> <!-- Proof of Chance link -->
+                <li><a href="index.html">Home</a></li>
+                <li><a href="proof-of-chance.html">Proof of Chance</a></li> 
                 <li><a href="#social">Social</a></li>
             </ul>
         </nav>
@@ -28,8 +28,8 @@
     <main>
         <section class="content">
             <h2>Today's Sentiment:</h2>
-            <p id="sentiment">Loading...</p> <!-- This id should match the one used in JavaScript -->
-            <h2 id="countdown-display">Time remaining: 60 seconds</h2> <!-- Display countdown -->
+            <p id="sentiment">Loading...</p> <!-- Sentiment Display -->
+            <h2 id="countdown-display">Time remaining: 60 seconds</h2> <!-- Countdown Display -->
         </section>
 
         <!-- Button to Buy $BorB from Raydium or Marketplace -->
@@ -47,6 +47,7 @@
         </nav>
     </footer>
 
+    <!-- Shared JavaScript for Cross-Page Syncing -->
     <script src="script.js"></script>
 </body>
 </html>
