--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@
     <!-- Confetti Library -->
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.4.0/dist/confetti.browser.min.js"></script>
     
-    <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Header with Navigation -->
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="proof-of-chance.html">Proof of Chance</a></li> 
+                <li><a href="#about">About</a></li>
+                <li><a href="proof-of-chance.html">Proof of Chance</a></li>
                 <li><a href="#social">Social</a></li>
             </ul>
         </nav>
@@ -24,19 +23,15 @@
         <p>Your new daily trading opportunity with a unique dynamic</p>
     </header>
 
-    <!-- Main Content -->
     <main>
         <section class="content">
             <h2>Today's Sentiment:</h2>
-            <p id="sentiment">Loading...</p> <!-- Sentiment Display -->
-            <h2 id="countdown-display">Time remaining: 60 seconds</h2> <!-- Countdown Display -->
+            <p id="sentiment">Loading...</p>
+            <h2 id="countdown-display">Time remaining: 60 seconds</h2>
         </section>
-
-        <!-- Button to Buy $BorB from Raydium or Marketplace -->
         <button id="get-started-btn">Start Your Trading Journey with $BorB</button>
     </main>
 
-    <!-- Footer -->
     <footer>
         <p>&copy; 2025 Bull or Bear Coin. All rights reserved.</p>
         <nav>
@@ -47,7 +42,6 @@
         </nav>
     </footer>
 
-    <!-- Shared JavaScript for Cross-Page Syncing -->
     <script src="script.js"></script>
 </body>
 </html>
