--- a/proof-of-chance.html
+++ b/proof-of-chance.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proof of Chance</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS if needed -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -20,8 +20,8 @@
         <section>
             <h2>How Today's Sentiment Was Determined</h2>
             <p>Today's sentiment was generated randomly using a secure method.</p>
-            <p id="sentiment-result">Loading...</p> <!-- Display sentiment result -->
-            <p id="random-value">Loading...</p> <!-- Display random value -->
+            <p id="sentiment-result">Loading...</p>
+            <p id="random-value">Loading...</p>
         </section>
     </main>
 
