--- a/proof-of-chance.html
+++ b/proof-of-chance.html
@@ -29,28 +29,6 @@
         <p>&copy; 2025 Bull or Bear Coin. All rights reserved.</p>
     </footer>
 
-    <script>
-        // Retrieve the sentiment and random value from localStorage
-        window.onload = function() {
-            const sentiment = localStorage.getItem("sentiment");
-            const randomValue = localStorage.getItem("randomValue");
-
-            // Display the retrieved data
-            if (sentiment && randomValue) {
-                document.getElementById("sentiment-result").textContent = `Sentiment: ${sentiment}`;
-                document.getElementById("random-value").textContent = `Random Value: ${randomValue}`;
-
-                // Change background color based on sentiment
-                if (sentiment === "Bullish") {
-                    document.body.style.backgroundColor = "green"; // Bullish sentiment: green
-                } else {
-                    document.body.style.backgroundColor = "red"; // Bearish sentiment: red
-                }
-            } else {
-                document.getElementById("sentiment-result").textContent = "No sentiment data found.";
-                document.getElementById("random-value").textContent = "No random value data found.";
-            }
-        };
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
