--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bull or Bear Coin ($BorB)</title>
+    
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.4.0/dist/confetti.browser.min.js"></script>
+    
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,7 +14,7 @@
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
-                <li><a href="proof-of-chance.html">Proof of Chance</a></li>
+                <li><a href="proof-of-chance.html">Proof of Chance</a></li> <!-- Proof of Chance link -->
                 <li><a href="#social">Social</a></li>
             </ul>
         </nav>
@@ -24,17 +26,18 @@
         <section class="content">
             <h2>Today's Sentiment:</h2>
             <p id="sentiment">Loading...</p>
-            <h2 id="countdown-display">Time remaining: 60 seconds</h2>
+            <h2 id="countdown-display">Time remaining: 60 seconds</h2> <!-- Display countdown -->
         </section>
+
         <button id="get-started-btn">Start Your Trading Journey with $BorB</button>
     </main>
 
     <footer>
         <p>&copy; 2025 Bull or Bear Coin. All rights reserved.</p>
         <nav>
-            <a href="proof-of-chance.html">Proof of Chance</a> |
-            <a href="#social">Social</a> |
-            <a href="privacy.html">Privacy Policy</a> |
+            <a href="proof-of-chance.html">Proof of Chance</a> | 
+            <a href="#social">Social</a> | 
+            <a href="privacy.html">Privacy Policy</a> | 
             <a href="terms.html">Terms of Service</a>
         </nav>
     </footer>
