--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Persistent Timer -->
+    <div id="persistent-timer">
+        Time remaining: <span id="countdown-display">60</span> seconds
+    </div>
+
     <header>
         <nav>
             <ul>
