--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bull or Bear Coin ($BorB)</title>
     
+    <!-- Confetti Library -->
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.4.0/dist/confetti.browser.min.js"></script>
     
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS if needed -->
 </head>
 <body>
+    <!-- Header with Navigation -->
     <header>
         <nav>
             <ul>
@@ -22,16 +24,19 @@
         <p>Your new daily trading opportunity with a unique dynamic</p>
     </header>
 
+    <!-- Main Content -->
     <main>
         <section class="content">
             <h2>Today's Sentiment:</h2>
-            <p id="sentiment">Loading...</p>
+            <p id="sentiment">Loading...</p> <!-- This id should match the one used in JavaScript -->
             <h2 id="countdown-display">Time remaining: 60 seconds</h2> <!-- Display countdown -->
         </section>
 
+        <!-- Button to Buy $BorB from Raydium or Marketplace -->
         <button id="get-started-btn">Start Your Trading Journey with $BorB</button>
     </main>
 
+    <!-- Footer -->
     <footer>
         <p>&copy; 2025 Bull or Bear Coin. All rights reserved.</p>
         <nav>
@@ -44,4 +49,4 @@
 
     <script src="script.js"></script>
 </body>
-</html>
+</html> 
