--- a/proof-of-chance.html
+++ b/proof-of-chance.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proof of Chance</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS if needed -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -37,8 +37,8 @@
 
             // Display the retrieved data
             if (sentiment && randomValue) {
-                document.getElementById("sentiment-result").textContent = `Sentiment: ${sentiment}`;
-                document.getElementById("random-value").textContent = `Random Value: ${randomValue}`;
+                document.getElementById("sentiment-result").textContent = Sentiment: ${sentiment};
+                document.getElementById("random-value").textContent = Random Value: ${randomValue};
 
                 // Change background color based on sentiment
                 if (sentiment === "Bullish") {
