--- a/proof-of-chance.html
+++ b/proof-of-chance.html
@@ -36,6 +36,13 @@
                 const response = await fetch('https://bullorbear.onrender.com/api/sentiment');
                 const data = await response.json();
 
+                if (data.error) {
+                    // If there is an error, display it
+                    document.getElementById("sentiment-result").textContent = data.error;
+                    document.getElementById("random-value").textContent = "";
+                    return;
+                }
+
                 const sentiment = data.sentiment;
                 const randomValue = data.randomValue; // Ensure the random value is fetched
 
