Update and rename social.html to socials.html

--- a/socials.html
+++ b/socials.html
@@ -12,7 +12,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="proof-of-chance.html">Proof of Chance</a></li>
-                <li><a href="social.html" class="active">Social</a></li>
+                <li><a href="socials.html" class="active">Social</a></li>
             </ul>
         </nav>
         <h1>Follow Us On Social Media</h1>
@@ -36,7 +36,7 @@
         <p>&copy; 2025 Bull or Bear Coin. All rights reserved.</p>
         <nav>
             <a href="proof-of-chance.html">Proof of Chance</a> | 
-            <a href="social.html">Social</a> | 
+            <a href="socials.html">Social</a> | 
             <a href="privacy.html">Privacy Policy</a> | 
             <a href="terms.html">Terms of Service</a>
         </nav>
