--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#about">About</a></li>
+                <li><a href="index.html">Home</a></li> <!-- Home page -->
                 <li><a href="proof-of-chance.html">Proof of Chance</a></li> 
-                <li><a href="#social">Social</a></li>
+                <li><a href="socials.html" class="active">Social</a></li> <!-- Updated link to socials.html -->
             </ul>
         </nav>
         <h1>Welcome to Bull or Bear Coin ($BorB)</h1>
@@ -34,7 +34,7 @@
         <p>&copy; 2025 Bull or Bear Coin. All rights reserved.</p>
         <nav>
             <a href="proof-of-chance.html">Proof of Chance</a> | 
-            <a href="#social">Social</a> | 
+            <a href="socials.html">Social</a> | 
             <a href="privacy.html">Privacy Policy</a> | 
             <a href="terms.html">Terms of Service</a>
         </nav>
@@ -105,4 +105,3 @@
     </script>
 </body>
 </html>
-
