--- a/socials.html
+++ b/socials.html
@@ -1,48 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Social Media</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Social Media</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="proof-of-chance.html">Proof of Chance</a></li>
-                <li><a href="socials.html" class="active">Social</a></li>
-            </ul>
-        </nav>
-        <h1>Follow Us On Social Media</h1>
-    </header>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="proof-of-chance.html">Proof of Chance</a></li>
+        <!-- On the socials page, it's correct to mark Social as active -->
+        <li><a href="socials.html" class="active">Social</a></li>
+      </ul>
+    </nav>
+    <h1>Follow Us On Social Media</h1>
+  </header>
 
-    <main>
-        <section class="content">
-            <h2>Stay Connected</h2>
-            <p>Here are some of the ways to connect with us online:</p>
-            <ul class="social-list">
-                <li><a href="mailto:ex1@ex.com">ex1@ex.com</a></li>
-                <li><a href="mailto:ex2@ex.com">ex2@ex.com</a></li>
-                <li><a href="mailto:ex3@ex.com">ex3@ex.com</a></li>
-                <li><a href="mailto:ex4@ex.com">ex4@ex.com</a></li>
-                <li><a href="mailto:ex5@ex.com">ex5@ex.com</a></li>
-            </ul>
-        </section>
-    </main>
+  <main>
+    <section class="content">
+      <h2>Stay Connected</h2>
+      <p>Here are some of the ways to connect with us online:</p>
+      <ul class="social-list">
+        <li><a href="mailto:ex1@ex.com">ex1@ex.com</a></li>
+        <li><a href="mailto:ex2@ex.com">ex2@ex.com</a></li>
+        <li><a href="mailto:ex3@ex.com">ex3@ex.com</a></li>
+        <li><a href="mailto:ex4@ex.com">ex4@ex.com</a></li>
+        <li><a href="mailto:ex5@ex.com">ex5@ex.com</a></li>
+      </ul>
+    </section>
+  </main>
 
-    <footer>
-        <p>&copy; 2025 Bull or Bear Coin. All rights reserved.</p>
-        <nav>
-            <a href="proof-of-chance.html">Proof of Chance</a> | 
-            <a href="socials.html">Social</a> | 
-            <a href="privacy.html">Privacy Policy</a> | 
-            <a href="terms.html">Terms of Service</a>
-        </nav>
-    </footer>
+  <footer>
+    <p>&copy; 2025 Bull or Bear Coin. All rights reserved.</p>
+    <nav>
+      <a href="proof-of-chance.html">Proof of Chance</a> | 
+      <a href="socials.html">Social</a> | 
+      <a href="privacy.html">Privacy Policy</a> | 
+      <a href="terms.html">Terms of Service</a>
+    </nav>
+  </footer>
 
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
 
